fixed stat cards on mobile

--- a/src/components/Dashboard/StatCard/statcard.scss
+++ b/src/components/Dashboard/StatCard/statcard.scss
@@ -1,7 +1,6 @@
 .stat-card {
   padding: var(--tl-spacing-md);
   border-radius: var(--tl-spacing-s);
-  width: 25%;
   display: flex;
   flex-direction: column;
   gap: var(--tl-spacing-2xs);
